test/parse/module/bad-memory-segment-address-negative.txt
;;; ERROR: 1
(module (memory 100 (segment -1 "foo")))
(;; STDERR ;;;
parse/module/bad-memory-segment-address-negative.txt:2:30: syntax error, unexpected INT, expecting NAT
(module (memory 100 (segment -1 "foo")))
                             ^^
;;; STDERR ;;)
